5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1831_3184.log
== TEST (2019-06-13 16:54:45) 
-- CODE:
alfa = array(eval(input("alfa:")))
l= ""
k = ""
for i in range(size(alfa)):
	l = alfa[size(alfa)]
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    alfa = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:36:09) 
-- CODE:
from numpy import*
alfa = array(eval(input("alfa:")))
l= ""
k = ""
for i in range(size(alfa)):
	l = alfa[size(alfa)]
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:36:15) 
-- CODE:
from numpy import*
alfa = array(eval(input("alfa:")))
l= ""
k = ""
for i in range(size(alfa)):
	l = alfa[size(alfa)]
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 15:36:37) 
-- CODE:
from numpy import*
alfa = array(eval(input("alfa:")))
l= ""
k = ""
for i in range(size(alfa)):
	l = alfa[size(alfa)]
	print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
